# writer-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  preference_pairs.jsonl  prompts.yaml
docs/: bio-comparison.md
docs/paper/: draft-v1.md
samples/: showcase.typ
scripts/: mlx_dpo.py  mlx_generate.py  mlx_worker.py
src/: cli.rs  config.rs  lib.rs  main.rs
src/backends/inference/: capabilities.rs  mlx.rs  mlx_worker.rs  mod.rs  ollama.rs  request.rs
src/backends/training/: artefact.rs  config.rs  mlx_tune.rs  mod.rs
src/bench/: combined.rs  mod.rs  slop_score.rs  voice_fidelity.rs
src/commands/: ablation.rs  agent_info.rs  build_lexicon.rs  eval_style.rs  generate_pairs.rs  init.rs  learn.rs  mod.rs  profile.rs  train.rs  train_dpo.rs  write.rs
src/corpus/: chunker.rs  mod.rs  normalize.rs  sample.rs
src/corpus/sources/: markdown.rs  obsidian.rs
src/decoding/: filter.rs  logit_bias.rs  mod.rs  prompts.rs  ranker.rs
src/stylometry/: fingerprint.rs  mod.rs  relevance.rs  scoring.rs
src/stylometry/features/: lengths.rs  mod.rs  readability.rs  sentences.rs
tests/: phase0_sample.rs  phase0_training_backend.rs  phase0_types.rs  phase2_stylometry.rs  phase3_ollama.rs
thoughts/shared/handoffs/writer-quality-architecture/: gpt-pro-round3-2026-04-11.md  handoff-2026-04-09-session3.md
