[package]
name = "writer-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local AI that writes in your voice, not ChatGPT's. Fine-tune a small model on your own writing and generate text that sounds like you."
license = "MIT"
repository = "https://github.com/199-biotechnologies/writer"
homepage = "https://github.com/199-biotechnologies/writer"
readme = "README.md"
keywords = ["writing", "ai", "llm", "local", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "writer"
path = "src/main.rs"

[[bin]]
name = "writer-bench"
path = "src/bin/writer_bench.rs"

[lib]
name = "writer_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
hdrhistogram = "7"
unicode-segmentation = "1"
regex = "1"
shellexpand = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "test-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
